examples/negative/silent_contract/exit_no_row.kai
# Silent contract (#520 audit, category 9 / effects): the
# prelude function `exit(n)` terminates the process and should
# surface as `/ Exit` (or be reachable only through an Exit
# handler). kaikai accepts the bare call from a pure-row main.
# Same family as `program_name_no_row.kai` —
# `prelude_effect_for` does not map `exit` to its label.
#
# See examples/negative/silent_contract/README.md for follow-up.

fn main() : Int = {
  exit(0)
  0
}
